tests/ui/pub/pub-ident-fn-with-lifetime-2.stderr
error: missing `fn` for method definition
  --> $DIR/pub-ident-fn-with-lifetime-2.rs:1:1
   |
LL | pub bar<'a>(&self, _s: &'a usize) -> bool { true }
   | ^^^^^^^
   |
help: add `fn` here to parse `bar` as a method
   |
LL | pub fn bar<'a>(&self, _s: &'a usize) -> bool { true }
   |     ++

error: aborting due to 1 previous error

